CASMCMS-7676 Add ability to template an IMS recipe
