# src/server/v3/resources/recipes.py
@@ -1,4 +1,7 @@
-# Copyright 2020-2021 Hewlett Packard Enterprise Development LP
+#
+# MIT License
+#
+# (C) Copyright 2020-2022 Hewlett Packard Enterprise Development LP
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
 # copy of this software and associated documentation files (the "Software"),
@@ -12,13 +15,12 @@
 #
 # THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 # IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
 # THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
 # OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
-#
-# (MIT License)
+
 """
 Recipe API
 """
@@ -126,6 +128,7 @@ class V3RecipeCollection(V3BaseRecipeCollection):
 
                 deleted_recipe = V3DeletedRecipeRecord(name=recipe.name, recipe_type=recipe.recipe_type,
                                                        linux_distribution=recipe.linux_distribution,
+                                                       template_dictionary=recipe.template_dictionary,
                                                        id=recipe.id, created=recipe.created, link=recipe.link)
                 if deleted_recipe.link:
                     try:
@@ -180,6 +183,7 @@ class V3RecipeResource(V3BaseRecipeCollection):
             recipe = current_app.data[self.recipes_table][recipe_id]
             deleted_recipe = V3DeletedRecipeRecord(name=recipe.name, recipe_type=recipe.recipe_type,
                                                    linux_distribution=recipe.linux_distribution,
+                                                   template_dictionary=recipe.template_dictionary,
                                                    id=recipe.id, created=recipe.created, link=recipe.link)
             if deleted_recipe.link:
                 try:
@@ -326,6 +330,7 @@ class V3DeletedRecipeCollection(V3BaseRecipeCollection):
 
                 recipe = V2RecipeRecord(name=deleted_recipe.name, recipe_type=deleted_recipe.recipe_type,
                                         linux_distribution=deleted_recipe.linux_distribution,
+                                        template_dictionary=deleted_recipe.template_dictionary,
                                         id=deleted_recipe.id, created=deleted_recipe.created,
                                         link=deleted_recipe.link)
                 for key, value in list(json_data.items()):
@@ -424,6 +429,7 @@ class V3DeletedRecipeResource(V3BaseRecipeCollection):
         deleted_recipe = current_app.data[self.deleted_recipes_table][deleted_recipe_id]
         recipe = V2RecipeRecord(name=deleted_recipe.name, recipe_type=deleted_recipe.recipe_type,
                                 linux_distribution=deleted_recipe.linux_distribution,
+                                template_dictionary=deleted_recipe.template_dictionary,
                                 id=deleted_recipe.id, created=deleted_recipe.created,
                                 link=deleted_recipe.link)
         for key, value in list(json_data.items()):
